@@ -2,10 +2,12 @@
 
 // Copyright (C) 2008, 2009, 2014 Embecosm Limited
 // Copyright (C) 2009-2014 Adapteva Inc.
+// Copyright (C) 2016 Pedro Alves
 
 // Contributor Jeremy Bennett <jeremy.bennett@embecosm.com>
 // Contributor: Oleg Raikhman <support@adapteva.com>
 // Contributor: Yaniv Sapir <support@adapteva.com>
+// Contributor: Pedro Alves <pedro@palves.net>
 
 // This file is part of the Adapteva RSP server.
 
@@ -612,6 +614,37 @@ RspConnection::getRspChar ()
 
 
 //-----------------------------------------------------------------------------
+//! Check if there input ready on the socket.
+
+//! @return  TRUE if so, FALSE otherwise.
+//-----------------------------------------------------------------------------
+bool
+RspConnection::inputReady ()
+{
+  fd_set readfds;
+  int res;
+  struct timeval zero = {};
+
+  FD_ZERO (&readfds);
+  FD_SET (clientFd, &readfds);
+
+  do
+    {
+      res = select (clientFd + 1, &readfds, NULL, NULL, &zero);
+    }
+  while (res == -1 && errno == EINTR);
+
+  if (res == 0)
+    return false;
+
+  if (FD_ISSET (clientFd, &readfds))
+    return true;
+
+  return false;
+}				// inputReady()
+
+
+//-----------------------------------------------------------------------------
 //! Check if there is an out-of-band BREAK command on the serial link.
 
 //! @return  TRUE if we got a BREAK, FALSE otherwise.
@@ -619,65 +652,32 @@ RspConnection::getRspChar ()
 bool
 RspConnection::getBreakCommand ()
 {
-  int flags;
-
-  // Set socket non-blocking
-  if ((flags = fcntl (clientFd, F_GETFL, 0)) < 0)
-    {
-      cerr << "Warning: getBreakCommand: fcntl initial get flags: "
-	   << strerror (errno) << "." << endl;
-      return  false;
-    }
-
-  if (fcntl (clientFd, F_SETFL, flags | O_NONBLOCK) < 0)
-    {
-      cerr << "Warning: getBreakCommand fcntl set non-blocking: "
-	   << strerror (errno) << "." << endl;
-      return  false;
-    }
+  if (!inputReady ())
+    return false;
 
   unsigned char c;
-  bool gotChar = false;
+  int n;
 
-  while (!gotChar)
+  do
     {
-      int n = read (clientFd, &c, sizeof (c));
+      n = read (clientFd, &c, sizeof (c));
+    }
+  while (n == -1 && errno == EINTR);
 
-      switch (n)
-	{
-	case -1:
-	  if (EINTR == errno)
-	    break;		// Retry
-	  else
-	    return false;	// Not necessarily serious could be temporary
+  switch (n)
+    {
+    case -1:
+      return false;		// Not necessarily serious could be temporary
 				// unavailable resource.
-	case 0:
-	  return false;		// No break character there
+    case 0:
+      return false;		// No break character there
 
-	default:
-	  gotChar = true;
-	}
+    default:
+      // @todo Not sure this is really right. What other characters are we
+      //       throwing away if it is not 0x03?
+      return (c == 0x03);
     }
-
-  // Set socket to blocking
-
-  if ((flags = fcntl (clientFd, F_GETFL, 0)) < 0)
-    {
-      cerr << "Error: fcntl get" << strerror (errno) << endl;
-      return false;
-    }
-
-
-  if (fcntl (clientFd, F_SETFL, flags & (~O_NONBLOCK)) < 0)
-    {
-      cerr << "Error: fcntl set blocking" << strerror (errno) << endl;
-      return false;
-    }
-
-  // @todo Not sure this is really right. What other characters are we
-  //       throwing away if it is not 0x03?
-  return (gotChar && (c == 0x03));
-}
+}				// getBreakCommand()
 
 
 // Local Variables:
